--- a/ResponsiveWebDesign/Survey Form/styles.css
+++ b/ResponsiveWebDesign/Survey Form/styles.css
@@ -1,25 +1,40 @@
-html {
+body {
     width: 100%;
-    height: 100%;
-    background: linear-gradient(#03131a, #19444f);
-}
-
-* {
+    height: 100vh;
     margin: 0;
-    padding: 0;
-    color: #ffffff;
-    font-family: 'Lato', sans-serif;
-}
+} 
 
-#div-main {
-    background-color: #03131a;
-    margin: 15vh 20%;
-    padding: 100px;
-    border-radius: 20px;
-}
-
-#title-descrpt {
+#main-div {
+    margin: 6vh 10vw;
     display: flex;
+    align-items: center;
     flex-direction: column;
     justify-content: center;
+}
+
+main {
+    
 } 
+
+.div-input {
+    border: solid 1px black;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+} 
+
+label {
+    display: block;
+    margin: 0.3rem 0;
+} 
+
+textarea,
+select {
+    margin: 10px 0;
+    width: 100%;
+    min-height: 2em;
+} 
+
+#button {
+    margin: 20px 15rem;
+}
